# OpenEnv-Code-Reviewer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
data/: pr_tasks.jsonl
docs/: HF_SPACE_QUICK_FIX.md  JUDGES_QUICKSTART.md  pr-grader-workflow.yml
scripts/: baseline_eval.py  eval_policy.py  train_policy.py
server/: __init__.py  app.py
src/: __init__.py  analyzer.py  config.py  openenv_env.py  pipeline.py  server.py
